<resources>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Network unlock</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="copy">Copy</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="default_web_client_id">146966708128-n5504dqd7e51t3dmm679pim3rpvohvol.apps.googleusercontent.com</string>
    <string name="expand_button_title">Advanced</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="firebase_database_url">https://samsungsimunlock-a9b6d.firebaseio.com</string>
    <string name="gcm_defaultSenderId">146966708128</string>
    <string name="google_api_key">AIzaSyAOW42-CwNRV7pWB2JMCpJ08mm5ZUtdGOU</string>
    <string name="google_app_id">1:146966708128:android:658178eeb24f5b5c</string>
    <string name="google_crash_reporting_api_key">AIzaSyAOW42-CwNRV7pWB2JMCpJ08mm5ZUtdGOU</string>
    <string name="google_storage_bucket">samsungsimunlock-a9b6d.appspot.com</string>
    <string name="network_locked_desc_aio">"Your phone is network locked and isn't allowed to use this SIM card. Unlock your phone to use this SIM card."</string>
    <string name="network_locked_desc_app">We noticed that you have a new SIM card. Do you want to unlock this device?</string>
    <string name="network_locked_desc_att">"Your device can't be activated on another service provider's network right now. For help, contact AT&amp;T."</string>
    <string name="network_locked_desc_cct">"Your device can't be activated on another carrier's network right now. For help, please contact Xfinity Mobile customer support"</string>
    <string name="network_locked_desc_dsh">Please contact our customer service center to unlock your phone.</string>
    <string name="network_locked_desc_dsh_tablet">"This SIM card can't be used with your tablet. Contact the service provider your tablet was purchased from to unlock your tablet and allow other SIM cards to be used."</string>
    <string name="network_locked_device_unlock_att">Device Unlock</string>
    <string name="network_locked_no_thanks_att">No thanks</string>
    <string name="network_locked_title_aio">Network locked</string>
    <string name="network_locked_title_app">Alert!</string>
    <string name="not_set">Not set</string>
    <string name="phone_locked">Phone locked</string>
    <string name="preference_copied">\"%1$s\" copied to clipboard.</string>
    <string name="project_id">samsungsimunlock-a9b6d</string>
    <string name="search_menu_title">Search</string>
    <string name="sesl_action_bar_up_description">Navigate up</string>
    <string name="sesl_action_menu_overflow_badge_description">New content available</string>
    <string name="sesl_action_menu_overflow_badge_text_n">N</string>
    <string name="sesl_action_menu_overflow_description">More options</string>
    <string name="sesl_action_mode_done">Done</string>
    <string name="sesl_capital_off">OFF</string>
    <string name="sesl_capital_on">ON</string>
    <string name="sesl_font_family_medium">sec-roboto-light</string>
    <string name="sesl_font_family_regular">sec-roboto-light</string>
    <string name="sesl_more_item_label">More</string>
    <string name="sesl_preferecne_badge_description">New notification</string>
    <string name="sesl_preference_off">OFF</string>
    <string name="sesl_preference_on">ON</string>
    <string name="sesl_search_hint">Search…</string>
    <string name="sesl_searchview_description_clear">Clear search field</string>
    <string name="sesl_searchview_description_search">Search</string>
    <string name="sesl_searchview_description_submit">Submit query</string>
    <string name="sesl_searchview_description_voice">Voice search</string>
    <string name="sesl_switch_off">Off</string>
    <string name="sesl_switch_on">On</string>
    <string name="sesl_text_style_medium">1</string>
    <string name="sesl_toolbar_collapse_description">Collapse</string>
    <string name="ssu_error_no_internet_later">Later</string>
    <string name="ssu_error_no_internet_msg">"Couldn't find any available networks"</string>
    <string name="ssu_error_no_internet_msg_CHA">Ensure you are connected to the internet and retry?</string>
    <string name="ssu_error_no_internet_retry">Retry</string>
    <string name="ssu_error_no_internet_title">No network connection</string>
    <string name="ssu_help_menu_title">Help</string>
    <string name="ssu_help_perm_unlock">"Select this option if you would like to request a permanent unlock for your mobile device. Once the device is unlocked, it can work on any carrier's network."</string>
    <string name="ssu_help_temp_unlock">"Select this option if you intend to travel internationally and use a local carrier's GSM service. Temporary unlock period is 30 days and will begin immediate after successful request. Device will lock back to T-Mobile at the end of the 30 days. Certain eligibility requirements apply."</string>
    <string name="ssu_label_help">Help</string>
    <string name="ssu_network_lock_dismiss">Dismiss</string>
    <string name="ssu_network_lock_msg">"Your phone isn't allowed to use this SIM card. You can check options for unlocking your phone in Settings."</string>
    <string name="ssu_network_lock_msg_USC">"Sorry, your device can't be activated on another carrier's network right now. For help, contact U.S. Cellular Customer Service at %s."</string>
    <string name="ssu_network_lock_msg_tablet">"Your tablet isn't allowed to use this SIM card. You can check options for unlocking your tablet in Settings."</string>
    <string name="ssu_network_lock_settings">Settings</string>
    <string name="ssu_network_lock_title">Network locked</string>
    <string name="ssu_no_ux_title">Samsung network unlock</string>
    <string name="ssu_perm_unlock_request_summary">Request a permanent network unlock so you can use your phone with other service providers.</string>
    <string name="ssu_perm_unlock_request_summary_tablet">Request a permanent network unlock so you can use your tablet with other service providers.</string>
    <string name="ssu_perm_unlock_request_title">Permanent unlock</string>
    <string name="ssu_perm_unlock_success">Your phone has been permanently unlocked.</string>
    <string name="ssu_perm_unlock_success_tablet">Your tablet has been permanently unlocked.</string>
    <string name="ssu_reset_success">Reset success</string>
    <string name="ssu_reset_summary">Network would be locked.</string>
    <string name="ssu_reset_title">Reset Samsung network unlock</string>
    <string name="ssu_status_lock">Locked</string>
    <string name="ssu_status_perm_unlock">Unlocked</string>
    <string name="ssu_status_temp_unlock">Temporarily unlocked</string>
    <string name="ssu_status_temp_unlock_finish">Unlocked until %s</string>
    <string name="ssu_status_title">Network lock status</string>
    <string name="ssu_summary">"View your phone's network lock status and check whether your phone is eligible to be unlocked."</string>
    <string name="ssu_summary_tablet">"View your tablet's network lock status and check whether your tablet is eligible to be unlocked."</string>
    <string name="ssu_temp_unlock_expire_msg">Temporary network unlock has expired.</string>
    <string name="ssu_temp_unlock_expire_msg_other_sim">Temporary network unlock has expired. SIM cards from other service providers will no longer work in this phone.</string>
    <string name="ssu_temp_unlock_expire_msg_other_sim_tablet">Temporary network unlock has expired. SIM cards from other service providers will no longer work in this tablet.</string>
    <string name="ssu_temp_unlock_expire_title">Unlock Expired</string>
    <string name="ssu_temp_unlock_expire_without_aid">"Your phone isn't able to make calls, send messages, or use mobile data."</string>
    <string name="ssu_temp_unlock_notify_carrier_msg">"Your phone's network unlock will expire in %d days."</string>
    <string name="ssu_temp_unlock_notify_carrier_msg_la2">To update your phone, visit an authorized Samsung service center, or contact us at %1$shttps://www.samsung.com/support/%2$s for remote assistance.</string>
    <string name="ssu_temp_unlock_notify_carrier_msg_tablet">"Your tablet's network unlock will expire in %d days."</string>
    <string name="ssu_temp_unlock_notify_carrier_msg_tablet_la2">To update your tablet, visit an authorized Samsung service center, or contact us at %1$shttps://www.samsung.com/support/%2$s for remote assistance.</string>
    <string name="ssu_temp_unlock_notify_non_carrier_msg">"Your phone's network unlock will expire in %d days. SIM cards from other service providers will no longer work."</string>
    <string name="ssu_temp_unlock_notify_non_carrier_msg_tablet">"Your tablet's network unlock will expire in %d days. SIM cards from other service providers will no longer work."</string>
    <string name="ssu_temp_unlock_notify_title">Unlock expiring soon.</string>
    <string name="ssu_temp_unlock_notify_title_la">Update service provider settings</string>
    <string name="ssu_temp_unlock_request_summary">Request a temporary network unlock so you can use your phone with other service providers.</string>
    <string name="ssu_temp_unlock_request_title">Temporary unlock</string>
    <string name="ssu_tmo_link">Learn More</string>
</resources>